Integrate simple chat system

--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,10 @@
     <script src="js/controllers/loginController.js"></script>
     <script src="js/controllers/profileController.js"></script>
     <script src="js/services/services.js"></script>
+    
+    <!-- Firebase -->
+    <script src='https://cdn.firebase.com/js/client/2.4.1/firebase.js'></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
 
 </head>
 
