Implement Terms and conditions page

--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
     <script src="js/controllers/registerController.js"></script>
     <script src="js/controllers/learnDetailController.js"></script>
     <script src="js/controllers/introController.js"></script>
+    <script src="js/controllers/termsConditionsController.js"></script>
     <script src="js/services/services.js"></script>
     
     <!-- google closure library -->
